--- a/app/scss/components/_view.scss
+++ b/app/scss/components/_view.scss
@@ -1,9 +1,6 @@
 // View
 
 .view {
-  display: flex;
   padding-right: 24px;
   padding-left: 24px;
-  flex-wrap: wrap;
-  justify-content: center;
 }
