--- a/app/scss/elements/_section.scss
+++ b/app/scss/elements/_section.scss
@@ -9,6 +9,8 @@
 
 .section__h2 {
   @extend %h2;
+  margin-top: 168px;
+  margin-bottom: 176px;
 }
 
 .section__button,
@@ -82,6 +84,7 @@
   margin-top: 192px;
   font-size: rem(72px);
   line-height: rem(88px);
+  text-align: left;
 }
 
 .section__title--small {
